--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "nexusui": "^2.0.9",
+    "dmx": "^0.2.2",
+    "lodash": "^4.17.11",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.5.22",
-    "vue-class-component": "^6.0.0",
+    "vue": "^2.6.7",
+    "vue-class-component": "^7.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.121",
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
-    "typescript": "^3.0.0",
-    "vue-hot-reload-api": "^2.3.2",
-    "vue-template-compiler": "^2.5.21",
+    "typescript": "^3.3.3333",
+    "vue-hot-reload-api": "^2.3.3",
+    "vue-template-compiler": "^2.6.7",
     "vuex-module-decorators": "^0.9.8"
   }
 }
