--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^11.9.5",
+    "connect-history-api-fallback": "^1.6.0",
     "dmx": "^0.2.2",
     "eslint": "^5.14.1",
     "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
     "http-proxy": "^1.17.0",
+    "json-diff": "^0.5.4",
     "nodemon": "^1.18.10",
     "osc": "^2.2.4",
     "socket.io": "^2.2.0",
