--- a/viewer/package.json
+++ b/viewer/package.json
@@ -5,29 +5,36 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "debug": "vue-cli-service build --mode=debug --watch",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "debug": "vue-cli-service build --mode=debug --watch"
   },
   "dependencies": {
+    "json-diff": "^0.5.4",
     "lodash": "^4.17.11",
     "register-service-worker": "^1.5.2",
     "socket.io-client": "^2.2.0",
-    "vue": "^2.6.7",
+    "stylus": "^0.54.5",
+    "vue": "^2.6.10",
     "vue-class-component": "^7.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.5.7",
     "vuex": "^3.0.1",
-    "vuex-class": "^0.3.1"
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.121",
+    "@types/lodash": "^4.14.123",
     "@types/socket.io-client": "^1.4.32",
-    "@vue/cli-plugin-pwa": "^3.4.1",
-    "@vue/cli-plugin-typescript": "^3.4.1",
-    "@vue/cli-service": "^3.4.1",
-    "typescript": "^3.3.3333",
+    "@vue/cli-plugin-pwa": "^3.5.1",
+    "@vue/cli-plugin-typescript": "^3.5.1",
+    "@vue/cli-service": "^3.5.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "typescript": "^3.3.4000",
+    "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-hot-reload-api": "^2.3.3",
-    "vue-template-compiler": "^2.6.7",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.2.1",
     "vuex-module-decorators": "^0.9.8"
   }
 }
