--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,16 @@
   "author": "martinHN",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^11.9.5",
     "connect-history-api-fallback": "^1.6.0",
+    "detect-rpi": "^1.3.0",
     "dmx": "^0.2.2",
-    "eslint": "^5.14.1",
-    "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
     "http-proxy": "^1.17.0",
     "json-diff": "^0.5.4",
-    "nodemon": "^1.18.10",
-    "osc": "^2.2.4",
-    "socket.io": "^2.2.0",
-    "ts-node": "^8.0.2",
-    "typescript": "^3.3.3333"
+    "osc": "^2.3.1",
+    "pigpio": "^1.2.2",
+    "serialport": "^7.1.5",
+    "socket.io": "^2.2.0"
   },
   "nodemonConfig": {
     "ignore": [
@@ -43,6 +40,15 @@
     "ext": "ts"
   },
   "devDependencies": {
-    "@types/socket.io": "^2.1.2"
+    "@types/node": "^11.11.6",
+    "@types/socket.io": "^2.1.2",
+    "eslint": "^5.15.3",
+    "eslint-plugin-import": "^2.16.0",
+    "nodemon": "^1.18.10",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.4000"
+  },
+  "engines": {
+    "node": ">=0.10.3 <0.12"
   }
 }
