--- a/viewer/package.json
+++ b/viewer/package.json
@@ -15,7 +15,7 @@
     "socket.io-client": "^2.2.0",
     "stylus": "^0.54.5",
     "vue": "^2.6.10",
-    "vue-class-component": "^7.0.0",
+    "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.7",
@@ -36,5 +36,8 @@
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.1",
     "vuex-module-decorators": "^0.9.8"
+  },
+  "engines" : { 
+    "node" : ">=0.10.3 <0.12" 
   }
 }
