--- a/viewer/package.json
+++ b/viewer/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "debug": "vue-cli-service build --mode=debug --watch"
+    "debug": "vue-cli-service build --mode=debug --watch",
+    "deploy": "npm run build && scp -r ../server/public pi@lampignon1.local:vermuth/server/public"
   },
   "dependencies": {
     "json-diff": "^0.5.4",
