--- a/viewer/package.json
+++ b/viewer/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "debug": "vue-cli-service build --mode=debug --watch",
-    "deploy": "npm run build && scp -r ../server/public pi@lampignon1.local:vermuth/server/public"
+    "deploy": "npm run build && rsync -r -e ssh -avz --delete-after  ../server/public pi@lampignon1.local:vermuth/server/"
   },
   "dependencies": {
     "json-diff": "^0.5.4",
