--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "light show control server",
   "main": "index.js",
   "scripts": {
-    "start": "node --inspect=0.0.0.0:9222 -r ts-node/register ./src/server.ts",
+    "start": "node --inspect=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
+    "start:stop": "node --inspect-brk=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
     "build": "tsc"
   },
   "keywords": [
@@ -17,12 +18,12 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
     "detect-rpi": "^1.3.0",
-    "dmx": "^0.2.2",
-    "express": "^4.16.4",
+    "dmx": "github:martinHN/dmx#master",
+    "express": "^4.17.1",
     "http-proxy": "^1.17.0",
     "json-diff": "^0.5.4",
     "osc": "^2.3.1",
-    "pigpio": "^1.2.2",
+    "pigpio": "^1.2.3",
     "serialport": "^7.1.5",
     "socket.io": "^2.2.0"
   },
@@ -34,21 +35,23 @@
       "node_modules"
     ],
     "watch": [
-      "src"
+      "src",
+      "../API"
     ],
     "exec": "npm start",
     "ext": "ts"
   },
   "devDependencies": {
-    "@types/node": "^11.11.6",
+    "@types/node": "^12.0",
     "@types/socket.io": "^2.1.2",
-    "eslint": "^5.15.3",
-    "eslint-plugin-import": "^2.16.0",
-    "nodemon": "^1.18.10",
-    "ts-node": "^8.0.3",
-    "typescript": "^3.3.4000"
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.18.2",
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0",
+    "tsconfig-paths": "^3.8.0",
+    "typescript": "^3.5.3"
   },
   "engines": {
-    "node": ">=0.10.3 <0.12"
+    "node": ">=0.12"
   }
 }
