--- a/viewer/package.json
+++ b/viewer/package.json
@@ -12,34 +12,35 @@
   },
   "dependencies": {
     "json-diff": "^0.5.4",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.5.2",
     "socket.io-client": "^2.2.0",
     "stylus": "^0.54.5",
     "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
+    "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.5.7",
-    "vuex": "^3.0.1",
+    "vue-router": "^3.0.7",
+    "vuetify": "^1.5.16",
+    "vuex": "^3.1.1",
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.123",
+    "@types/lodash": "^4.14.136",
     "@types/socket.io-client": "^1.4.32",
-    "@vue/cli-plugin-pwa": "^3.5.1",
-    "@vue/cli-plugin-typescript": "^3.5.1",
-    "@vue/cli-service": "^3.5.1",
+    "@vue/cli-plugin-pwa": "^3.10.0",
+    "@vue/cli-plugin-typescript": "^3.10.0",
+    "@vue/cli-service": "^3.10.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "typescript": "^3.3.4000",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.5.3",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-hot-reload-api": "^2.3.3",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.1",
-    "vuex-module-decorators": "^0.9.8"
+    "vuetify-loader": "^1.3.0",
+    "vuex-module-decorators": "^0.9.9"
   },
-  "engines" : { 
-    "node" : ">=0.10.3 <0.12" 
+  "engines": {
+    "node": ">=0.10.3 <0.12"
   }
 }
