--- a/viewer/tsconfig.json
+++ b/viewer/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
@@ -16,9 +16,8 @@
       "vuetify"
     ],
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["./src/*"],
+      "@API/*": ["../API/*"]
     },
     "lib": [
       "esnext",
