--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node --inspect=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
     "start:stop": "node --inspect-brk=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "run": "ts-node src/server.ts -P . --files"
   },
   "keywords": [
     "light",
@@ -22,6 +23,7 @@
     "express": "^4.17.1",
     "http-proxy": "^1.17.0",
     "json-diff": "^0.5.4",
+    "module-alias": "^2.2.1",
     "osc": "^2.3.1",
     "pigpio": "^1.2.3",
     "serialport": "^7.1.5",
@@ -53,5 +55,9 @@
   },
   "engines": {
     "node": ">=0.12"
+  },
+  "_moduleAliases": {
+    "@": "dist/server/src",
+    "@API": "dist/API"
   }
 }
