--- a/viewer/package.json
+++ b/viewer/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint",
     "debug": "vue-cli-service build --mode=debug --watch",
     "deploy": "npm run build && rsync -r -e ssh -avz --delete-after  ../server/public pi@lampignon1.local:vermuth/server/",
-    "deploy2": "npm run build && rsync -r -e ssh -avz --delete-after  ../server/public pi@lampignon2.local:vermuth/server/"
+    "deploy2": "npm run build && rsync -r -e ssh -avz --delete-after  ../server/public pi@lampignon2.local:vermuth/server/",
+    "deploylogic": "npm run build && rsync -r -e ssh -avz --delete-after  ../server/public pi@radiologic.local:vermuth/server/"
   },
   "dependencies": {
     "json-diff": "^0.5.4",
