--- a/API/tsconfig.json
+++ b/API/tsconfig.json
@@ -9,6 +9,7 @@
     "inlineSources": true,
     "inlineSourceMap": true,
     "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
