--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": false,
     "inlineSources": true,
     "inlineSourceMap": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators":true,
     "moduleResolution": "node",
     "allowJs":true,
