--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "vermuth",
   "version": "1.0.0",
   "description": "light show control server",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "start": "node --inspect=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
