--- a/viewer/package.json
+++ b/viewer/package.json
@@ -26,11 +26,13 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@mdi/font": "^4.3.95",
     "@types/lodash": "^4.14.136",
     "@types/socket.io-client": "^1.4.32",
     "@vue/cli-plugin-pwa": "^3.10.0",
     "@vue/cli-plugin-typescript": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
