--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "start:stop": "node --inspect-brk=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
     "build": "tsc",
     "buildNrun": "NODE_ENV=production ts-node src/server.ts -P . --files",
-    "run": "NODE_ENV=production node dist/server/src/server.js"
+    "run": "NODE_ENV=production node dist/server/src/server.js",
+    "lint": "tslint --project . --fix"
   },
   "keywords": [
     "light",
