--- a/server/appSettings_old.json
+++ b/server/appSettings_old.json
@@ -7,92 +7,144 @@
         "_enabled": false,
         "ctype": "base",
         "hasDuplicatedCirc": false,
-        "reactToMaster": true
+        "roleType": "other",
+        "roleFam": "other"
       },
       "driverName": "none",
       "fixtures": {
-        "fixture,,": {
-          "name": [
-            [
-              "fixture",
-              []
-            ],
-            []
-          ],
+        "fixture": {
+          "name": "fixture",
           "enabled": true,
           "globalValue": 0,
-          "ftype": "direct",
-          "_baseCirc": 0,
-          "events": {
-            "_events": {},
-            "_eventsCount": 1
-          },
           "channels": [
             {
               "name": "r",
-              "circ": 0,
-              "_enabled": false,
+              "circ": 1,
+              "_enabled": true,
               "ctype": "base",
               "hasDuplicatedCirc": false,
-              "reactToMaster": false
+              "roleType": "r",
+              "roleFam": "color"
             },
             {
               "name": "g",
-              "circ": 1,
-              "_enabled": false,
+              "circ": 2,
+              "_enabled": true,
               "ctype": "base",
               "hasDuplicatedCirc": false,
-              "reactToMaster": false
+              "roleType": "g",
+              "roleFam": "color"
             },
             {
               "name": "b",
-              "circ": 2,
-              "_enabled": false,
+              "circ": 3,
+              "_enabled": true,
               "ctype": "base",
               "hasDuplicatedCirc": false,
-              "reactToMaster": false
+              "roleType": "b",
+              "roleFam": "color"
             },
             {
               "name": "dim",
-              "circ": 3,
-              "_enabled": false,
+              "circ": 4,
+              "_enabled": true,
               "ctype": "base",
               "hasDuplicatedCirc": false,
-              "reactToMaster": true
+              "roleType": "dimmer",
+              "roleFam": "dim"
+            },
+            {
+              "name": "pan",
+              "circ": 0,
+              "_enabled": true,
+              "ctype": "base",
+              "hasDuplicatedCirc": true,
+              "roleType": "pan",
+              "roleFam": "position"
+            },
+            {
+              "name": "pan fine",
+              "circ": 0,
+              "_enabled": true,
+              "ctype": "base",
+              "hasDuplicatedCirc": true,
+              "roleType": "pan_fine",
+              "roleFam": "position"
+            },
+            {
+              "name": "tilt",
+              "circ": 0,
+              "_enabled": true,
+              "ctype": "base",
+              "hasDuplicatedCirc": true,
+              "roleType": "tilt",
+              "roleFam": "position"
+            },
+            {
+              "name": "tilt fine",
+              "circ": 0,
+              "_enabled": true,
+              "ctype": "base",
+              "hasDuplicatedCirc": true,
+              "roleType": "tilt_fine",
+              "roleFam": "position"
             }
-          ]
-        },
-        "fixture 1,,": {
-          "name": [
-            [
-              "fixture 1",
-              []
-            ],
-            []
           ],
+          "ftype": "direct",
+          "_baseCirc": 0
+        },
+        "fixture 1": {
+          "name": "fixture 1",
           "enabled": true,
           "globalValue": 0,
-          "ftype": "direct",
-          "_baseCirc": 0,
-          "events": {
-            "_events": {},
-            "_eventsCount": 1
-          },
           "channels": [
             {
               "name": "channel",
-              "circ": 1,
-              "_enabled": false,
+              "circ": 2,
+              "_enabled": true,
               "ctype": "base",
-              "hasDuplicatedCirc": true,
-              "reactToMaster": true
+              "hasDuplicatedCirc": false,
+              "roleType": "dimmer",
+              "roleFam": "dim"
             }
-          ]
+          ],
+          "ftype": "direct",
+          "_baseCirc": 4
         }
+      },
+      "groups": {
+        "group": [
+          "fixture 1"
+        ],
+        "group2": [
+          "fixture"
+        ]
       },
       "_master": 1
     },
-    "sequenceList": [],
+    "sequenceList": [
+      {
+        "name": "no name",
+        "timeIn": 5,
+        "hold": 0,
+        "timeOut": 0,
+        "stateName": "__black"
+      },
+      {
+        "name": "undefined.",
+        "timeIn": 5,
+        "hold": 0,
+        "timeOut": 0,
+        "stateName": "__full"
+      },
+      {
+        "name": "undefined.",
+        "timeIn": 0,
+        "hold": 0,
+        "timeOut": 0,
+        "stateName": ""
+      }
+    ],
     "sequencePlayer": {
       "curSeq": {
         "name": "black",
@@ -111,110 +163,71 @@
       "playState": "stopped"
     },
     "stateList": {
-      "universe": {
-        "testedChannel": {
-          "name": "tested",
-          "circ": -1,
-          "_enabled": false,
-          "ctype": "base",
-          "hasDuplicatedCirc": false,
-          "reactToMaster": true
-        },
-        "driverName": "none",
-        "fixtures": {
-          "fixture,,": {
-            "name": [
-              [
-                "fixture",
-                []
-              ],
-              []
-            ],
-            "enabled": true,
-            "globalValue": 0,
-            "ftype": "direct",
-            "_baseCirc": 0,
-            "events": {
-              "_events": {},
-              "_eventsCount": 1
-            },
-            "channels": [
-              {
-                "name": "r",
-                "circ": 0,
-                "_enabled": false,
-                "ctype": "base",
-                "hasDuplicatedCirc": false,
-                "reactToMaster": false
-              },
-              {
-                "name": "g",
-                "circ": 1,
-                "_enabled": false,
-                "ctype": "base",
-                "hasDuplicatedCirc": false,
-                "reactToMaster": false
-              },
-              {
-                "name": "b",
-                "circ": 2,
-                "_enabled": false,
-                "ctype": "base",
-                "hasDuplicatedCirc": false,
-                "reactToMaster": false
-              },
-              {
-                "name": "dim",
-                "circ": 3,
-                "_enabled": false,
-                "ctype": "base",
-                "hasDuplicatedCirc": false,
-                "reactToMaster": true
-              }
-            ]
-          },
-          "fixture 1,,": {
-            "name": [
-              [
-                "fixture 1",
-                []
-              ],
-              []
-            ],
-            "enabled": true,
-            "globalValue": 0,
-            "ftype": "direct",
-            "_baseCirc": 0,
-            "events": {
-              "_events": {},
-              "_eventsCount": 1
-            },
-            "channels": [
-              {
-                "name": "channel",
-                "circ": 1,
-                "_enabled": false,
-                "ctype": "base",
-                "hasDuplicatedCirc": true,
-                "reactToMaster": true
-              }
-            ]
-          }
-        },
-        "_master": 1
-      },
       "states": {
-        "gdfs": {
-          "name": "gdfs",
+        "0": {
+          "name": "0",
           "full": false,
           "fixtureStates": [
             {
               "name": "fixture",
               "pChannelValues": {
-                "r": 0.614,
-                "g": 0.316,
+                "channel": 0.461
+              }
+            },
+            {
+              "name": "fixture 1",
+              "pChannelValues": {
+                "channel": 0
+              }
+            }
+          ]
+        },
+        "Début": {
+          "name": "Début",
+          "full": false,
+          "fixtureStates": [
+            {
+              "name": "fixture",
+              "pChannelValues": {
+                "r": 0,
+                "g": 0,
                 "b": 0,
-                "dim": 1
+                "dim": 0.357,
+                "pan": 0,
+                "pan fine": 0,
+                "tilt": 0,
+                "tilt fine": 0
+              }
+            },
+            {
+              "name": "fixture 1",
+              "pChannelValues": {
+                "channel": 0
+              }
+            }
+          ]
+        },
+        "Fin": {
+          "name": "Fin",
+          "full": false,
+          "fixtureStates": [
+            {
+              "name": "fixture",
+              "pChannelValues": {
+                "r": 0,
+                "g": 0,
+                "b": 0,
+                "dim": 0.069,
+                "pan": 0,
+                "pan fine": 0,
+                "tilt": 0,
+                "tilt fine": 0
+              }
+            },
+            {
+              "name": "fixture 1",
+              "pChannelValues": {
+                "channel": 0
               }
             }
           ]
@@ -225,22 +238,20 @@
         "full": true,
         "fixtureStates": [
           {
-            "name": [
-              "fixture",
-              []
-            ],
+            "name": "fixture",
             "pChannelValues": {
               "r": 0,
               "g": 0,
               "b": 0,
-              "dim": 0.292
+              "dim": 0.069,
+              "pan": 0,
+              "pan fine": 0,
+              "tilt": 0,
+              "tilt fine": 0
             }
           },
           {
-            "name": [
-              "fixture 1",
-              []
-            ],
+            "name": "fixture 1",
             "pChannelValues": {
               "channel": 0
             }
@@ -248,6 +259,12 @@
         ]
       },
       "loadedStateName": "current"
+    },
+    "testValue": 1,
+    "dmxController": {
+      "selectedPortName": "",
+      "selectedDriverName": "enttec-usb-dmx-pro",
+      "universeName": "main"
     }
   },
   "lastSessionID": "default"
