--- a/API/package.json
+++ b/API/package.json
@@ -7,6 +7,7 @@
     "lint": "tslint --project . --fix"
   },
   "dependencies": {
+    "bezier-easing": "^2.1.0",
     "json-diff": "^0.5.4",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.5.2",
