--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,7 @@
     "inlineSourceMap": true,
     "experimentalDecorators":true,
     "moduleResolution": "node",
+    "esModuleInterop":true,
     "allowJs":true,
     "baseUrl":"./src",
     "paths": {
