--- a/API/package.json
+++ b/API/package.json
@@ -11,16 +11,17 @@
     "json-diff": "^0.5.4",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.5.2",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.136",
-    "@types/node": "^12.6.8",
-    "@types/socket.io": "^2.1.2",
+    "@types/lodash": "^4.14.144",
+    "@types/node": "^12.12.5",
+    "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
+    "reflect-metadata": "^0.1.13",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.4"
   },
   "engines": {
     "node": ">=0.10.3 <0.12"
