--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,8 @@
     "json-diff": "^0.5.4",
     "module-alias": "^2.2.2",
     "osc": "^2.3.1",
-    "pigpio": "^1.3.0",
-    "serialport": "^7.1.5",
+    "pigpio": "^2.0.0",
+    "serialport": "^8.0.0",
     "socket.io": "^2.3.0"
   },
   "nodemonConfig": {
@@ -46,11 +46,12 @@
     "ext": "ts"
   },
   "devDependencies": {
-    "@types/node": "^12.11.7",
+    "@types/node": "^12.12.3",
     "@types/socket.io": "^2.1.4",
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.19.4",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.6.4"
