--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,7 @@
     "inlineSources": true,
     "inlineSourceMap": true,
     "experimentalDecorators":true,
+    "emitDecoratorMetadata":true,
     "moduleResolution": "node",
     "esModuleInterop":true,
     "allowJs":true,
