--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "author": "martinHN",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.13",
     "connect-history-api-fallback": "^1.6.0",
     "detect-rpi": "^1.3.0",
     "dmx": "github:martinHN/dmx#master",
