--- a/server/package.json
+++ b/server/package.json
@@ -46,15 +46,18 @@
     "ext": "ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.2",
     "@types/node": "^12.12.15",
     "@types/socket.io": "^2.1.4",
+    "@vue/cli-service": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.19.1",
     "nodemon": "^1.19.4",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.5.4",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
+    "vue-template-compiler": "^2.6.11"
   },
   "engines": {
     "node": ">=0.12"
