--- a/viewer/public/manifest.json
+++ b/viewer/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "conduktor",
-  "short_name": "conduktor",
+  "name": "vermuth",
+  "short_name": "vermuth",
   "icons": [
     {
       "src": "./img/icons/favicon-192x192.png",
