--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "adm-zip": "^0.4.14",
+    "bezier-easing": "^2.1.0",
     "connect-history-api-fallback": "^1.6.0",
     "detect-rpi": "^1.4.0",
     "dmx": "github:martinHN/dmx#master",
