--- a/server/package.json
+++ b/server/package.json
@@ -29,8 +29,9 @@
     "json-diff": "^0.5.4",
     "module-alias": "^2.2.2",
     "osc": "^2.4.0",
-    "pigpio": "^2.0.0",
+    "pigpio": "^3",
     "serialport": "^8.0.7",
+    "serve-index": "^1.9.1",
     "socket.io": "^2.3.0"
   },
   "nodemonConfig": {
@@ -49,19 +50,19 @@
     "ext": "ts"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
-    "@types/node": "^12.12.27",
+    "@types/express": "^4.17.3",
+    "@types/node": "^12.12.29",
     "@types/socket.io": "^2.1.4",
-    "@vue/cli-service": "^4.2.2",
+    "@vue/cli-service": "^4.2.3",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
-    "fork-ts-checker-webpack-plugin": "^4.0.4",
-    "nodemon": "^1.19.4",
+    "fork-ts-checker-webpack-plugin": "^4.0.5",
+    "nodemon": "^2",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.3",
     "vue-template-compiler": "^2.6.11",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
