--- a/viewer/package.json
+++ b/viewer/package.json
@@ -21,8 +21,8 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.0",
-    "vue-router": "^3.1.5",
-    "vuetify": "^2.2.12",
+    "vue-router": "^3.1.6",
+    "vuetify": "^2.2.15",
     "vuex": "^3.1.2",
     "vuex-class": "^0.3.2"
   },
@@ -30,21 +30,24 @@
     "@mdi/font": "^4.9.95",
     "@types/lodash": "^4.14.149",
     "@types/socket.io-client": "^1.4.32",
-    "@vue/cli-plugin-pwa": "^4.2.2",
-    "@vue/cli-plugin-typescript": "^4.2.2",
-    "@vue/cli-service": "^4.2.2",
+    "@typescript-eslint/parser": "^2.22.0",
+    "@vue/cli-plugin-pwa": "^4.2.3",
+    "@vue/cli-plugin-typescript": "^4.2.3",
+    "@vue/cli-service": "^4.2.3",
+    "eslint": "^6.8.0",
     "fibers": "^4.0.2",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.13.1",
-    "sass": "^1.25.0",
+    "sass": "^1.26.2",
     "sass-loader": "^8.0.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-eslint-parser": "^7.0.0",
     "vue-hot-reload-api": "^2.3.4",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.4.3",
-    "vuex-module-decorators": "^0.11.0"
+    "vuex-module-decorators": "^0.16.1"
   },
   "engines": {
     "node": ">0.11 <=0.12"
