--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "light show control server",
   "main": "server.ts",
-  "type": "module",
   "scripts": {
     "start": "node --inspect=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
@@ -34,6 +33,10 @@
     "serve-index": "^1.9.1",
     "socket.io": "^2.3.0"
   },
+  "optionalDependencies": {
+    "pigpio": "^3",
+    "localtunnel": "^2.0.0"
+  },
   "nodemonConfig": {
     "ignore": [
       "**/*.test.ts",
@@ -51,6 +54,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
+    "@types/localtunnel": "^2.0.0",
     "@types/node": "^12.12.29",
     "@types/socket.io": "^2.1.4",
     "@vue/cli-service": "^4.2.3",
