--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,12 +13,22 @@ jobs:
         run: ./build.sh
       - name: Package linux
         run: cd server && PLATFORM_TARGET=linux DEPLOY_FOLDER=build_linux node pkg.js
-
-
       - uses: actions/upload-artifact@v1
         with:
           name: build_linux
           path: ./server/build_linux
+      - name: Package OSX
+        run: cd server && PLATFORM_TARGET=linux DEPLOY_FOLDER=build_osx node pkg.js
+      - uses: actions/upload-artifact@v1
+        with:
+          name: build_osx
+          path: ./server/build_osx
+      - name: Package Win
+        run: cd server && PLATFORM_TARGET=linux DEPLOY_FOLDER=build_windows node pkg.js
+      - uses: actions/upload-artifact@v1
+        with:
+          name: build_windows
+          path: ./server/build_windows
 
 
 
@@ -31,6 +41,16 @@ jobs:
         with:
           name: build_linux
       - run: cd build_linux && zip -r ../build_linux.zip .
+
+      - uses: actions/download-artifact@v1
+        with:
+          name: build_windows
+      - run: cd build_windows && zip -r ../build_windows.zip .
+
+      - uses: actions/download-artifact@v1
+        with:
+          name: build_osx
+      - run: cd build_osx && zip -r ../build_osx.zip .
 
 
       - name: Create Release
@@ -56,4 +76,22 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./build_linux.zip
           asset_name: build_linux.zip
+          asset_content_type: application/zip
+      - name: Upload Release Asset Win
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./build_windows.zip
+          asset_name: build_windows.zip
+          asset_content_type: application/zip
+      - name: Upload Release Asset OSX
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./build_osx.zip
+          asset_name: build_osx.zip
           asset_content_type: application/zip
