--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
 
-  build-all:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -17,12 +17,30 @@ jobs:
         with:
           name: build_linux
           path: ./server/build_linux
+          
+  build-osx:
+    runs-on: macos-latest
+    steps: 
+      - uses: actions/checkout@v1
+      - name: install
+        run: ./install.sh
+      - name: Build
+        run: ./build.sh
       - name: Package OSX
         run: cd server && PLATFORM_TARGET=osx DEPLOY_FOLDER=build_osx node pkg.js
       - uses: actions/upload-artifact@v1
         with:
           name: build_osx
           path: ./server/build_osx
+
+  build-windows:
+    runs-on: windows-latest
+    steps: 
+      - uses: actions/checkout@v1
+      - name: install
+        run: ./install.sh
+      - name: Build
+        run: ./build.sh
       - name: Package Win
         run: cd server && PLATFORM_TARGET=windows DEPLOY_FOLDER=build_windows node pkg.js
       - uses: actions/upload-artifact@v1
@@ -34,7 +52,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [build-all]
+    needs: [build-linux,build-windows,build-osx]
     steps:
      
       - uses: actions/download-artifact@v1
