--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,66 +53,66 @@ jobs:
 
 
 
-  release:
-    runs-on: ubuntu-latest
-    needs: [build-linux,build-windows,build-osx]
-    steps:
+  # release:
+  #   runs-on: ubuntu-latest
+  #   needs: [build-linux,build-windows,build-osx]
+  #   steps:
      
-      - uses: actions/download-artifact@v1
-        with:
-          name: build_linux
-      - run: cd build_linux && zip -r ../build_linux.zip .
+  #     - uses: actions/download-artifact@v1
+  #       with:
+  #         name: build_linux
+  #     - run: cd build_linux && zip -r ../build_linux.zip .
 
-      - uses: actions/download-artifact@v1
-        with:
-          name: build_windows
-      - run: cd build_windows && zip -r ../build_windows.zip .
+  #     - uses: actions/download-artifact@v1
+  #       with:
+  #         name: build_windows
+  #     - run: cd build_windows && zip -r ../build_windows.zip .
 
-      - uses: actions/download-artifact@v1
-        with:
-          name: build_osx
-      - run: cd build_osx && zip -r ../build_osx.zip .
+  #     - uses: actions/download-artifact@v1
+  #       with:
+  #         name: build_osx
+  #     - run: cd build_osx && zip -r ../build_osx.zip .
 
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: v0.0
-          release_name: Release v0.0
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: true
-          prerelease: true
+  #     - name: Create Release
+  #       id: create_release
+  #       uses: actions/create-release@latest
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+  #       with:
+  #         tag_name: v0.0
+  #         release_name: Release v0.0
+  #         body: |
+  #           Changes in this Release
+  #           - First Change
+  #           - Second Change
+  #         draft: true
+  #         prerelease: true
 
-      - name: Upload Release Asset Linux
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./build_linux.zip
-          asset_name: build_linux.zip
-          asset_content_type: application/zip
-      - name: Upload Release Asset Win
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./build_windows.zip
-          asset_name: build_windows.zip
-          asset_content_type: application/zip
-      - name: Upload Release Asset OSX
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./build_osx.zip
-          asset_name: build_osx.zip
-          asset_content_type: application/zip
+  #     - name: Upload Release Asset Linux
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+  #         asset_path: ./build_linux.zip
+  #         asset_name: build_linux.zip
+  #         asset_content_type: application/zip
+  #     - name: Upload Release Asset Win
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+  #         asset_path: ./build_windows.zip
+  #         asset_name: build_windows.zip
+  #         asset_content_type: application/zip
+  #     - name: Upload Release Asset OSX
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+  #         asset_path: ./build_osx.zip
+  #         asset_name: build_osx.zip
+  #         asset_content_type: application/zip
