--- a/API/package.json
+++ b/API/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vermuth-API",
+  "name": "vermuthAPI",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "build:server": "webpack ",
     "build:client": "IS_CLIENT=1 webpack ",
-    "lint": "tslint --project . --fix"
+    "lint": "eslint src/**/* --fix"
   },
   "dependencies": {
     "adm-zip": "^0.4.13",
@@ -20,6 +20,10 @@
     "@types/node": "^12.12.25",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
+    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^5.1.0",
     "fork-ts-checker-webpack-plugin": "^4.0.4",
