--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "build": "webpack src/server.ts",
     "buildNrun": "NODE_ENV=production ts-node src/server.ts -P . --files",
     "run": "NODE_ENV=production node dist/server/src/server.js",
-    "lint": "tslint --project . --fix",
+    "lint": "eslint src/**/* --fix",
     "buildApp": "node pkg.js"
   },
   "keywords": [
@@ -58,11 +58,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
-    "@types/localtunnel": "^2.0.0",
     "@types/node": "^12.12.29",
     "@types/socket.io": "^2.1.4",
-    "@vue/cli-service": "^4.2.3",
     "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "eslint-plugin-import": "^2.20.1",
     "follow-redirects": "^1.11.0",
     "fork-ts-checker-webpack-plugin": "^4.1.0",
@@ -73,7 +74,6 @@
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3",
-    "vue-template-compiler": "^2.6.11",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
   },
