--- a/API/package.json
+++ b/API/package.json
@@ -20,12 +20,13 @@
     "@types/node": "^12.12.25",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
-    "eslint": "^6.8.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^5.1.0",
+    "debug": "^4.1.1",
+    "eslint": "^6.8.0",
     "fork-ts-checker-webpack-plugin": "^4.0.4",
     "nodemon": "^2.0.2",
     "reflect-metadata": "^0.1.13",
