--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,6 @@
     "bezier-easing": "^2.1.0",
     "chrome-launcher": "^0.13.1",
     "connect-history-api-fallback": "^1.6.0",
-    "debug": "^4.1.1",
     "detect-rpi": "^1.4.0",
     "dmx": "github:martinHN/dmx#master",
     "express": "^4.17.1",
@@ -60,10 +59,10 @@
     "@types/express": "^4.17.3",
     "@types/node": "^12.12.29",
     "@types/socket.io": "^2.1.4",
-    "eslint": "^6.8.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
     "follow-redirects": "^1.11.0",
     "fork-ts-checker-webpack-plugin": "^4.1.0",
@@ -74,6 +73,7 @@
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
   },
