--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "detect-rpi": "^1.4.0",
     "dmx": "github:martinHN/dmx#master",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.0.6",
     "http-proxy": "^1.18.0",
     "json-diff": "^0.5.4",
     "module-alias": "^2.2.2",
