--- a/viewer/package.json
+++ b/viewer/package.json
@@ -37,6 +37,7 @@
     "@vue/cli-plugin-pwa": "^4.3.1",
     "@vue/cli-plugin-typescript": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
+    "compression-webpack-plugin": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsdoc": "^24.0.1",
