--- a/API/package.json
+++ b/API/package.json
@@ -8,12 +8,12 @@
     "lint": "eslint src/**/* --fix"
   },
   "dependencies": {
-    "adm-zip": "^0.4.13",
-    "bezier-easing": "^2.1.0",
-    "json-diff": "^0.5.4",
-    "lodash": "^4.17.15",
-    "register-service-worker": "^1.5.2",
-    "socket.io-client": "^2.3.0"
+    "adm-zip": "^0.4.x",
+    "bezier-easing": "^2.x"
+  },
+  "peerDependencies": {
+    "json-diff": "^0.5.x",
+    "lodash": "^4.x"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
