--- a/viewer/tsconfig.json
+++ b/viewer/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs",
+    "module": "ES2020",
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
