--- a/viewer/package.json
+++ b/viewer/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hscmap/vue-menu": "^2.10.0",
+    "@types/vuedraggable": "^2.23.0",
     "debug": "^4.1.1",
     "json-diff": "^0.5.4",
     "lodash": "^4.17.15",
@@ -23,6 +24,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.1.6",
+    "vuedraggable": "^2.23.2",
     "vuetify": "^2.2.26",
     "vuex": "^3.3.0",
     "vuex-class": "^0.3.2"
