--- a/API/package.json
+++ b/API/package.json
@@ -28,6 +28,7 @@
     "debug": "^4.1.1",
     "eslint": "^6.8.0",
     "fork-ts-checker-webpack-plugin": "^4.0.4",
+    "node-watch": "^0.6.4",
     "nodemon": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "thread-loader": "^2.1.3",
