--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "adm-zip": "^0.4.14",
     "bezier-easing": "^2.1.0",
-    "chrome-launcher": "^0.13.1",
+    "chrome-launcher": "^0.13.2",
     "connect-history-api-fallback": "^1.6.0",
     "detect-rpi": "^1.4.0",
     "dmx": "github:martinHN/dmx#master",
@@ -33,7 +33,7 @@
     "module-alias": "^2.2.2",
     "open": "^7.0.3",
     "osc": "^2.4.1",
-    "serialport": "^8.0.7",
+    "serialport": "^9",
     "serve-index": "^1.9.1",
     "socket.io": "^2.3.0"
   },
@@ -51,19 +51,19 @@
     ],
     "watch": [
       "src",
-      "../API"
+      "../API/gen"
     ],
     "exec": "npm start",
     "ext": "ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
-    "@types/node": "^12.12.37",
+    "@types/node": "^12.12.38",
     "@types/socket.io": "^2.1.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^7",
     "eslint-plugin-import": "^2.20.2",
     "follow-redirects": "^1.11.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
