--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,10 @@
   "author": "martinHN",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "adm-zip": "^0.4.14",
+    "babel-loader": "^8.1.0",
     "bezier-easing": "^2.1.0",
     "chrome-launcher": "^0.13.2",
     "connect-history-api-fallback": "^1.6.0",
