--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "start": "node --inspect=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
-    "build": "webpack src/server.ts",
+    "build": "NODE_ENV=production webpack src/server.ts",
     "buildNrun": "NODE_ENV=production ts-node src/server.ts -P . --files",
-    "run": "NODE_ENV=production node dist/server/src/server.js",
+    "run": "NODE_ENV=production node distPacked/mainServer.js",
     "runTs":"node  -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
     "lint": "eslint src/**/* --fix",
     "buildApp": "node pkg.js"
