--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "bin": "app.js",
   "scripts": {
     "start": "node --inspect=0.0.0.0:9222 -r tsconfig-paths/register -r ts-node/register ./src/server.ts $(echo $VERMUTH_ARGS)",
-    "start:watch": "nodemon",
+    "start:watch": "npm run genOnce --prefix ../API && nodemon",
     "build": "webpack src/server.ts",
     "buildNrun": "NODE_ENV=production ts-node src/server.ts -P . --files",
     "run": "NODE_ENV=production node distPacked/mainServer.js",
@@ -36,6 +36,7 @@
     "http-proxy": "^1.18.0",
     "json-diff": "^0.5.4",
     "module-alias": "^2.2.2",
+    "node-hid": "^1.3.1",
     "open": "^7.0.3",
     "osc": "^2.4.1",
     "serialport": "^9",
