--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "node-hid": "^1.3.1",
     "open": "^7.0.3",
     "osc": "^2.4.1",
+    "sacn": "^4.1.0",
     "serialport": "^9",
     "serve-index": "^1.9.1",
     "socket.io": "^2.3.0",
